# srttranslate

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  srttranslate.py  subtitles.py  tox.ini  tox_multipython.ini  translator.py
srttranslate/: deeplhandler.py  main.py  subtitles.py  translator.py
tests/: test_subtitles.py  test_translator.py
