[metadata]
name = srttranslate
version = file: srttranslate/VERSION
author = Javier Llopis
author_email = javier@llopis.me
description = Subtitle srt file automatic translator based on deepl.com
license = MIT
url = https://github.com/destrangis/srttranslate

[options]
install_requires = deepl
setup_requires = deepl
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
   srttranslate = srttranslate.main:main
