[metadata]
name = srttranslate
version = file: srttranslate/VERSION
author = Javier Llopis
author_email = javier@llopis.me
description = Subtitle srt file automatic translator based on deepl.com
long_description = file: README.rst
long_description_content_type = text/rst
license = MIT
url = https://github.com/destrangis/srttranslate
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Text Processing :: Linguistic

[options]
install_requires = deepl
setup_requires = deepl
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
   srttranslate = srttranslate.main:main
